added get order item by id Lambda function

--- a/sample-app-with-pgjdbc/template.yaml
+++ b/sample-app-with-pgjdbc/template.yaml
@@ -127,6 +127,34 @@ Resources:
       RetentionInDays: 7
 
 
+  GetOrderItemByIdFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: GetOrderItemByIdWithJava21Lambda
+      AutoPublishAlias: liveVersion
+      Handler: software.amazonaws.example.order.handler.GetOrderItemByIdHandler::handleRequest
+      Policies:
+        - Version: '2012-10-17' # Policy Document
+          Statement:
+            - Effect: Allow
+              Action:
+                - dsql:DbConnectAdmin
+              Resource: !Sub arn:aws:dsql:${AWS::Region}:${AWS::AccountId}:cluster/${AuroraDSQLClusterId}
+              
+      Events:
+        GetRequestById:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /orderitems/{id}
+            Method: get     
+            
+            
+  GetOrderItemByIdFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${GetOrderItemByIdFunction}"
+      RetentionInDays: 7
 
 Outputs:
   AWSLambdaJava21WithDSQLAndPgJDBCAPIEndpoint:
