--- a/sample-app-with-pgjdbc/template.yaml
+++ b/sample-app-with-pgjdbc/template.yaml
@@ -17,8 +17,8 @@ Globals:
   Function:
     CodeUri: target/aws-lambda-java-21-with-aurora-dsql-and-pgjdbc-1.0.0-SNAPSHOT.jar
     Runtime: java21
-    #SnapStart:
-     #ApplyOn: PublishedVersions     
+    SnapStart:
+      ApplyOn: PublishedVersions     
     Timeout: 30 
     MemorySize: 1024
     Architectures:
