--- a/sample-app-with-pgjdbc/pom.xml
+++ b/sample-app-with-pgjdbc/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.18.2</version>
 		</dependency>
+		<dependency>
+      		<groupId>com.fasterxml.jackson.datatype</groupId>
+      		<artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
