--- a/sample-app-with-aurora-dsql-jdbc-connector/pom.xml
+++ b/sample-app-with-aurora-dsql-jdbc-connector/pom.xml
@@ -45,6 +45,7 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-lambda-java-serialization</artifactId>
 			<version>1.1.5</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
