--- a/sample-app-with-pgjdbc/pom.xml
+++ b/sample-app-with-pgjdbc/pom.xml
@@ -46,6 +46,7 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-lambda-java-serialization</artifactId>
 			<version>1.1.5</version>
+			<scope>provided</scope>
 		</dependency>
 	   
 		<dependency>
