enabled priming by default

--- a/sample-app-with-aurora-dsql-jdbc-connector/template.yaml
+++ b/sample-app-with-aurora-dsql-jdbc-connector/template.yaml
@@ -17,8 +17,8 @@ Globals:
   Function:
     CodeUri: target/aws-lambda-java-21-with-aurora-dsql-jdbc-connector-1.0.0-SNAPSHOT.jar
     Runtime: java21
-    #SnapStart:
-      #ApplyOn: PublishedVersions     
+    SnapStart:
+      ApplyOn: PublishedVersions     
     Timeout: 900 
     MemorySize: 1024
     Architectures:
